<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.noa.laboratorio_62_5.SecondActivity">


    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_forward_back"
        android:id="@+id/button2_1"
        android:layout_centerHorizontal="true"
        android:onClick="forwardZoom"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_left"
        android:id="@+id/button2_2"
        android:layout_below="@+id/button2_1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="48dp"
        android:onClick="left"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_fade"
        android:id="@+id/button2_3"
        android:layout_below="@+id/button2_2"
        android:layout_alignLeft="@+id/button2_2"
        android:layout_alignStart="@+id/button2_2"
        android:layout_marginTop="37dp"
        android:onClick="fade"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_by_default"
        android:id="@+id/button2_4"
        android:layout_below="@+id/button2_3"
        android:layout_alignLeft="@+id/button2_3"
        android:layout_alignStart="@+id/button2_3"
        android:layout_marginTop="48dp"
        android:onClick="byDefault"/>
</RelativeLayout>
