<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.noa.laboratorio_62_5.MainActivity"
    android:translationZ="8dp">


    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_zoom_back"
        android:id="@+id/button"
        android:layout_marginTop="36dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="37dp"
        android:layout_marginStart="37dp"
        android:background="#cbfe3f"
        android:shadowColor="#b7b5b5"
        android:translationZ="2dp"
        android:onClick="zoomBack"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_fade"
        android:id="@+id/button2"
        android:layout_alignTop="@+id/button"
        android:layout_alignLeft="@+id/button4"
        android:layout_alignStart="@+id/button4"
        android:translationZ="8dp"
        android:background="#fecf4d"
        android:shadowColor="#b7b5b5"
        android:onClick="fade"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_right"
        android:id="@+id/button3"
        android:layout_below="@+id/button"
        android:layout_alignLeft="@+id/button"
        android:layout_alignStart="@+id/button"
        android:layout_marginTop="68dp"
        android:shadowColor="#b7b5b5"
        android:background="#0b7fe5"
        android:onClick="right"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_back"
        android:id="@+id/button4"
        android:layout_alignTop="@+id/button3"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginRight="41dp"
        android:layout_marginEnd="41dp"
        android:shadowColor="#b7b5b5"
        android:background="#fe5151"
        android:onClick="back"/>
</RelativeLayout>
